git submodule update

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "DynamixelSDK"]
 	path = DynamixelSDK
 	url = https://github.com/AndersonYu7/DynamixelSDK.git
+	branch = main
 [submodule "ubuntu_docker"]
 	path = ubuntu_docker
 	url = https://github.com/AndersonYu7/ubuntu_docker.git
+	branch = main
