--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = DynamixelSDK
 	url = https://github.com/AndersonYu7/DynamixelSDK.git
 	branch = main
+[submodule "autorace_docker"]
+	path = autorace_docker
+	url = https://github.com/AndersonYu7/autorace_docker.git
